GPencil: Fill tool on the surface will not be fill in correct place. #99459

Closed
opened 2022-07-05 14:03:45 +02:00 by shoji kawano · 15 comments

System Information
Operating system: Windows 10
Graphics card: GTX1080

Blender Version
Broken: 3.2.0, 3.3.0-alpha+master.6e879c39987c
Worked: 2.93.109

Short description of error
The use of the fill tool on the surface of the grease pencil will not be fill in correct place.

image.png

image.png

Exact steps for others to reproduce the error

  1. Start Blender.
  2. Create a grease pencil object and enter draw mode.
  3. Set "Stroke Placement" to "Surface".
  4. Draw a stroke on the default cube with the Draw tool.
  5. Create a new material, uncheck Stroke and check Fill.
  6. Select the material you created and fill the stroke with the Fill tool.
  7. Filled the wrong position.
**System Information** Operating system: Windows 10 Graphics card: GTX1080 **Blender Version** Broken: 3.2.0, 3.3.0-alpha+master.6e879c39987c Worked: 2.93.109 **Short description of error** The use of the fill tool on the surface of the grease pencil will not be fill in correct place. ![image.png](https://archive.blender.org/developer/F13260730/image.png) ![image.png](https://archive.blender.org/developer/F13260735/image.png) **Exact steps for others to reproduce the error** 1. Start Blender. 2. Create a grease pencil object and enter draw mode. 3. Set "Stroke Placement" to "Surface". 4. Draw a stroke on the default cube with the Draw tool. 5. Create a new material, uncheck Stroke and check Fill. 6. Select the material you created and fill the stroke with the Fill tool. 7. Filled the wrong position.
Author

Added subscriber: @umiyuki

Added subscriber: @umiyuki
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @antoniov

Added subscriber: @antoniov

Looking at the code, not sure we can solve this easily. The fill tool is working in an "internal" 2D flat representation of the fill area and cannot access to the surface. Also, the fill tool is not designed to work in areas with volume (not flat), so the result can be unexpected.

I would consider this a know issue because the right (a maybe unique) way of solve this is the right way is to have boolean operations. There were some plans about this boolean library for 2D, but now is paused.

Looking at the code, not sure we can solve this easily. The fill tool is working in an "internal" 2D flat representation of the fill area and cannot access to the surface. Also, the fill tool is not designed to work in areas with volume (not flat), so the result can be unexpected. I would consider this a know issue because the right (a maybe unique) way of solve this is the right way is to have boolean operations. There were some plans about this boolean library for 2D, but now is paused.
Antonio Vazquez changed title from The use of the fill tool on the surface of the grease pencil will not be fill in correct place. to GPencil: Fill tool on the surface will not be fill in correct place. 2022-07-21 16:06:19 +02:00
Author

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Author

I don't think this is a known issue. It works fine with Blender 2.93 and 3.0. I'm having problems with 3.1 and later. In other words, it's a bug that was recently caused by some mistake.

I don't think this is a known issue. It works fine with Blender 2.93 and 3.0. I'm having problems with 3.1 and later. In other words, it's a bug that was recently caused by some mistake.

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev

@OmarEmaraDev I guess this could be introduced in this commit: https://developer.blender.org/rBaa0ac0035a0d3601672a0c732e3f8f932a36fc04

I have tried to compile several times but I cannot compile that version...could you try to find if this commit breaks the fill. In theory, previous commit must work.

Here a simple test file.
T99459_test_file.blend

@OmarEmaraDev I guess this could be introduced in this commit: https://developer.blender.org/rBaa0ac0035a0d3601672a0c732e3f8f932a36fc04 I have tried to compile several times but I cannot compile that version...could you try to find if this commit breaks the fill. In theory, previous commit must work. Here a simple test file. [T99459_test_file.blend](https://archive.blender.org/developer/F13314666/T99459_test_file.blend)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii could you try to test this bug? I always get a cmake error with the suspicious commit.

@mano-wii could you try to test this bug? I always get a cmake error with the suspicious commit.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

@mano-wii I have done a partial revert to test and without this commit the fill is working as expected, so something in the depths array is not working as expected in Fill.

@mano-wii I have done a partial revert to test and without this commit the fill is working as expected, so something in the depths array is not working as expected in Fill.

This issue was referenced by 703dff333c

This issue was referenced by 703dff333ce6cbc25c990042858a0c40f9a212cb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-07-25 19:14:18 +02:00
Author

Thanks for your efforts to investigate and fix the bug!

Thanks for your efforts to investigate and fix the bug!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99459
No description provided.