source/blender/editors/space_view3d/view3d_draw.c
@@ -2247,16 +2247,16 @@ void view3d_depths_rect_create(ARegion *region, rcti *rect, ViewDepths *r_d)
 static ViewDepths *view3d_depths_create(ARegion *region)
 {
   ViewDepths *d = MEM_callocN(sizeof(ViewDepths), "ViewDepths");
-  d->w = region->winx;
-  d->h = region->winy;
 
   {
     GPUViewport *viewport = WM_draw_region_get_viewport(region);
     GPUTexture *depth_tx = GPU_viewport_depth_texture(viewport);
     uint32_t *int_depths = GPU_texture_read(depth_tx, GPU_DATA_UINT_24_8, 0);
+    d->w = GPU_texture_width(depth_tx);
+    d->h = GPU_texture_height(depth_tx);
     d->depths = (float *)int_depths;
     /* Convert in-place. */
-    int pixel_count = GPU_texture_width(depth_tx) * GPU_texture_height(depth_tx);
+    int pixel_count = d->w * d->h;
     for (int i = 0; i < pixel_count; i++) {
       d->depths[i] = (int_depths[i] >> 8u) / (float)0xFFFFFF;
     }
